--- a/Webshop/Webshop.csproj
+++ b/Webshop/Webshop.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1-dev-00876" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers" />
+    </ItemGroup>
+
 </Project>
