--- a/Webshop/Webshop.csproj
+++ b/Webshop/Webshop.csproj
@@ -5,14 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MongoDB.Bson" Version="2.13.1" />
+      <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
       <PackageReference Include="Serilog" Version="2.11.0-dev-01367" />
       <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00229" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="3.2.1-dev-00288" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1-dev-00876" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers" />
     </ItemGroup>
 
 </Project>
