--- a/Webshop/appsettings.json
+++ b/Webshop/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDatabase": {
+    "ConnectionString": "mongodb://root:example@localhost:27017/",
+    "DatabaseName": "WebShop"
+  }
 }
