--- a/dk/Dockerfile
+++ b/dk/Dockerfile
@@ -15,7 +15,7 @@ COPY /web/package*.json ./
 # install project dependencies
 RUN npm install
 # copy project files and folders to the current working directory (i.e. 'app' folder)
-COPY /web/. .
+COPY . .
 # build app for production with minification
 RUN npm run build
 
