--- a/dk/Dockerfile
+++ b/dk/Dockerfile
@@ -13,6 +13,7 @@ WORKDIR /app
 # copy both 'package.json' and 'package-lock.json' (if available)
 COPY /web/package*.json ./
 # install project dependencies
+RUN npm install -g @vue/cli
 RUN npm install
 # copy project files and folders to the current working directory (i.e. 'app' folder)
 COPY . .
