--- a/Webshop/appsettings.json
+++ b/Webshop/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "MongoDatabase": {
-    "ConnectionString": "mongodb://root:example@localhost:27017/",
+    "ConnectionString": "mongodb://root:ff19uR88@srv-captain--webshop-mongodb/",
     "DatabaseName": "WebShop"
   }
 }
