--- a/src/Webshop/appsettings.Development.json
+++ b/src/Webshop/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "Urls": "http://*:1337",
+  "Urls": "http://localhost:1337",
   "Serilog": {
     "MinimumLevel": "Information",
     "Override": {
