--- a/src/Webshop/appsettings.json
+++ b/src/Webshop/appsettings.json
@@ -1,14 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Urls": "http://+:1337",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Override": {
+      "Microsoft.AspNetCore": "Warning",
+      "MyApp": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ]
   },
   "AllowedHosts": "*",
   "MongoDatabase": {
-    "ConnectionString": "mongodb://root:ff19uR88@srv-captain--webshop-mongodb/",
+    "ConnectionString": "mongodb://root:example@localhost/",
     "DatabaseName": "WebShop"
   }
 }
