--- a/src/Webshop/appsettings.json
+++ b/src/Webshop/appsettings.json
@@ -14,7 +14,7 @@
   },
   "AllowedHosts": "*",
   "MongoDatabase": {
-    "ConnectionString": "mongodb://root:example@localhost/",
+    "ConnectionString": "mongodb://root:ff19uR88@srv-captain--webshop-mongodb/",
     "DatabaseName": "WebShop"
   }
 }
