--- a/src/Webshop/Webshop.csproj
+++ b/src/Webshop/Webshop.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.13.1" />
       <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
       <PackageReference Include="Serilog" Version="2.11.0-dev-01367" />
