--- a/src/Webshop/appsettings.json
+++ b/src/Webshop/appsettings.json
@@ -17,6 +17,10 @@
   "MongoDatabase": {
     "ConnectionString": "mongodb://root:ff19uR88@srv-captain--webshop-mongodb/",
     "DatabaseName": "WebShop"
+  },
+  "JwtConfig": {
+    "Secret": "1349yasdf13fasd1rsfdaf",
+    "Issuer": "rutefjord.no"
   }
 }
 
